@@ -1,3 +1,10 @@
+2008-06-23  Kristian Rietveld  <kris@imendio.com>
+
+	* gobject/glib-mkenums.in: introduce an ENUMPREFIX substitution.
+
+	* gio/gioenumtypes.h.template: use @ENUMPREFIX@ instead of
+	hard coding "G" as prefix.
+
 2008-06-22  Stefan Kost  <ensonic@users.sf.net>
 
 	* glib/gurifuncs.c:
